--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -79,7 +79,7 @@
         <code>null</code> = {{ "?" }}
       </li>
       <li>
-        <code>{key: "value"}</code> = {{ "?" }}
+        <code>{key: "value"}</code> = {{ "?" }} <!-- be careful with syntax! -->
       </li>
     </ol>
 
