minor style and wording changes

--- a/challenge_3/index.html
+++ b/challenge_3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <!-- add ng-app="appThree" to the body tag here -->
+<html> <!-- add ng-app="appThree" to the html tag here -->
 <head>
   <title>Challenge 3</title>
   <meta charset="utf8" />
